# SOFC_QA_Bench

./: .env.example  .gitignore  README.md  pyproject.toml  readme_sofc_ai_benchmark.md  source.xlsx
.cursor/rules/: sofc-benchmark-project.mdc
configs/: eval.yaml  models.yaml  prompts.yaml  run.yaml
data/qa_sets/sofc_v1/: manifest.yaml  source.xlsx
data/qa_sets/sofc_v1/jsonl/: multi_choice.jsonl  open_ended.jsonl  single_choice.jsonl  tf.jsonl
data/qa_sets/sofc_v2/: manifest.yaml
prompts/templates/: multi_choice.jinja  open_ended.jinja  single_choice.jinja  tf.jinja
prompts/versions/v1/: prompt_meta.yaml
prompts/versions/v2/: prompt_meta.yaml
prompts/versions/v2/templates/: multi_choice.jinja  open_ended.jinja  single_choice.jinja  tf.jinja
prompts/versions/v3/: prompt_meta.yaml
prompts/versions/v3/templates/: multi_choice.jinja  open_ended.jinja  single_choice.jinja  tf.jinja
prompts/versions/v4/: prompt_meta.yaml
prompts/versions/v4/templates/: multi_choice.jinja  open_ended.jinja  single_choice.jinja  tf.jinja
src/sofc_bench/: __init__.py  cli.py
src/sofc_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sofc_bench/adapters/: __init__.py  base.py  hf_local.py  ollama.py  openai.py
src/sofc_bench/core/: __init__.py  dataset.py  prompt.py  runner.py  schemas.py
src/sofc_bench/eval/: __init__.py  aggregate.py  export.py  metrics.py  parsing.py
src/sofc_bench/utils/: __init__.py  io.py
